  but a default object that is returned when the given name is not defined.
  This behavior is more consistent, and if pars need to be passed to an
  object, it can be solved in other ways (eg through methods after
  construction).
- Changed CDScheduler so that in now stores scheduling info for protocols
  in a public static array

AM 01/10/05
- Fixed all protocols to comply to the (String) signature constructor 
  (the protocols classes)
- Removed some unused code (several classes)
- Fixed some (but not all) warnings generated by the use of generic
  data structures in JDK 1.5 (several classes)
- Used a feature of JDK1.5 to generate better roundings of configuration
  parameters (in Integers.java)

GJ 30/09/05
- Fixed all protocols to comply to the (String,Object) signature constructor.

MJ 30/09/05
- cleaned up the Configuration package. Note that the behavior of getInstance
  is changed; the only consequence is that now protocols MUST implement
  the (String,Object) constructor (so far (String) was also accepted).
  In any case if your classes don't conform, you'll get a clean error message,
  and you can fix them in a few seconds (by adding an Object par).

SV 30/09/05
- Updated peersim.config.FastConfig to support multiple linkables per protocol,
  and fixed respective documentation.

GJ 26/09/05
- Removed example.hot.InetFactory class: old and unused.
- Updated exscript.txt config file.

GJ 22/09/05
- Updated examples config files.
- Refactored example.hot.* package (now using WireByMethod class).
- Updated example docs.
- Updated REAME file (fixed command line instruction).

SV 17/09/05
- Fixed a bug in IncrementalFreq: When a negative item is submitted, the number
  of inserted items (n) is now not increased.
- Added method add(int i,int k) in IncrementalFreq, that can add an item k times
  at once.

MJ 17/09/05
- Cleanup of peersim.util package; mainly docs, but some bugfixes too
  eg in IncrementalFreq.equals. 
- new methods in GraphIO and GraphFactory