@@ -19,10 +19,11 @@
 package peersim.transport;
 
 /**
- * Generic interface to be implemented by protocol that are based on
+ * Generic interface to be implemented by protocols that beed to be assigned to
  * routers. The idea is that each node is assigned to a router, by
- * invoking @link #setRouter(int) method. Routers are identified by
- * integer indexes, based on the assumption that the router network
+ * invoking {@link #setRouter(int)} method. Routers are identified by
+ * integer indexes (starting from 0), based on the assumption that the
+ * router network
  * is static. The router information is then used by different 
  * implementations to compute latency, congestion, etc.
  *
